--- a/index.html
+++ b/index.html
@@ -5,5 +5,14 @@
     </head>
     <body>
         <h1>Brandon Hucks</h1>
+        <section class="assign">
+            <img src="images/problem-statement.png" />
+            <section class="assign-det">
+                <h2>Problem Statement: Accessing Textbooks</h2>
+                <p>
+                    Students need a cheaper and more accessible alternative to required textbooks.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
