--- a/index.html
+++ b/index.html
@@ -5,12 +5,25 @@
     </head>
     <body>
         <h1>Brandon Hucks</h1>
+
+        <!-- Problem Statement Assignemtn -->
         <section class="assign">
             <img src="images/problem-statement.png" />
             <section class="assign-det">
                 <h2>Problem Statement: Accessing Textbooks</h2>
                 <p>
                     Students need a cheaper and more accessible alternative to required textbooks.
+                </p>
+            </section>
+        </section>
+
+        <!-- Affinity Diagram Assignment -->
+        <section class="assign">
+            <img src="images/affinity-diagram.png" />
+            <section class="assign-det">
+                <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Accessing Textbooks</h2></a>
+                <p>
+                    Our Affinity Diagram includes five groups, Product Ideas, Hurdles, Technology, Design, and Advertising. These groups are to help us get an idea about how to bring our solution to life.  
                 </p>
             </section>
         </section>
