--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>CSCE 190: Brandon Hucks</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Brandon Hucks</h1>
@@ -27,5 +28,17 @@
                 </p>
             </section>
         </section>
+
+        <!-- Personas Assignment -->
+        <section class = "assign">
+            <img src="images/my-persona.jpg" />
+            <section class = "assign-det">
+                <a href="files/all-personas.pdf"><h2>Team Personas: Aldebaran</h2></a>
+                <p>
+                    My persona is about John Doe, a software developer for this project | "If it's worth my time, it's worth my best."
+                </p>
+            </section>
+        </section>
+        
     </body>
 </html>
