--- a/index.html
+++ b/index.html
@@ -33,12 +33,23 @@
         <section class = "assign">
             <img src="images/my-persona.jpg" />
             <section class = "assign-det">
-                <a href="files/all-personas.pdf"><h2>Team Personas: Aldebaran</h2></a>
+                <a href="files/all-personas.pdf"><h2>Team Personas: John Doe</h2></a>
                 <p>
                     My persona is about John Doe, a software developer for this project | "If it's worth my time, it's worth my best."
                 </p>
             </section>
         </section>
         
+        <!-- Storyboard Assignment -->
+        <section class = "assign">
+            <img src="images/my-storyboard.jpg" />
+            <section class = "assign-det">
+                <a href="files/all-storyboards.pdf"><h2>Team Storyboards: John Doe</h2></a>
+                <p>
+                    With only 24 hours left to complete the Textbook Accessing Application, John Doe puts his head down and gets to work. 
+                </p>
+            </section>
+        </section>
+
     </body>
 </html>
