--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         
         <!-- Storyboard Assignment -->
         <section class = "assign">
-            <img src = "images/my-storyboard.jpg" />
+            <img src = "images/my_storyboard.jpg" />
             <section class = "assign-det">
                 <a href = "files/all-storyboards.pdf"><h2>Team Storyboards: John Doe</h2></a>
                 <p>
