--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Brandon Hucks</h1>
 
-        <!-- Problem Statement Assignemtn -->
+        <!-- Problem Statement Assignment -->
         <section class = "assign">
             <img src = "images/problem-statement.png" />
             <section class = "assign-det">
@@ -47,6 +47,17 @@
                 <a href = "files/all-storyboards.pdf"><h2>Team Storyboards: John Doe</h2></a>
                 <p>
                     With only 24 hours left to complete the Textbook Accessing Application, John Doe puts his head down and gets to work. 
+                </p>
+            </section>
+        </section>
+
+        <!-- Sketching Assignment -->
+        <section class = "assign">
+            <img src = "images/my-sketch.jpg" />
+            <section class = "assign-det">
+                <a href = "files/all-sketches.pdf"><h2>Team Sketches: Accessing Textbooks</h2></a>
+                <p>
+                    These sketches show the ideas that the group members had for the USC Textbook Resource application.
                 </p>
             </section>
         </section>
