--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="assign">
         <img src="images/problem-statement.png" />
         <section class="assign-det">
-            <a>
+            <a href="images/problem-statement.png">
                 <h2>Problem Statement: Accessing Textbooks</h2>
             </a>
             <p>
@@ -93,7 +93,7 @@
 
     <!-- Hi-Fi Prototype Assignment -->
     <section class="assign">
-        <img src="images/team-prototype.png" />
+        <img src="images/hifi-prototype.png" />
         <section class="assign-det">
             <a href="https://www.youtube.com/watch?v=A7xKQwwQiPM">
                 <h2>Team Hi-Fi Prototype: Accessing Textbooks</h2>
