--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 
     <!-- Problem Statement Assignment -->
     <section class="assign">
-        <img src="images/problem-statement.png" />
+        <a href="images/problem-statement.png">
+            <img src="images/team-statement.png" />
+        </a>
         <section class="assign-det">
             <a href="images/problem-statement.png">
                 <h2>Problem Statement: Accessing Textbooks</h2>
@@ -24,7 +26,9 @@
 
     <!-- Affinity Diagram Assignment -->
     <section class="assign">
-        <img src="images/affinity-diagram.png" />
+        <a href="images/affinity-diagram.png">
+            <img src="images/affinity-diagram.png" />
+        </a>
         <section class="assign-det">
             <a href="files/affinity-diagram.pdf">
                 <h2>Affinity Diagram: Accessing Textbooks</h2>
@@ -38,7 +42,9 @@
 
     <!-- Personas Assignment -->
     <section class="assign">
-        <img src="images/my-persona.jpg" />
+        <a href="images/my-persona.jpg">
+            <img src="images/my-persona.jpg" />
+        </a>
         <section class="assign-det">
             <a href="files/all-personas.pdf">
                 <h2>Team Personas: John Doe</h2>
@@ -52,7 +58,9 @@
 
     <!-- Storyboard Assignment -->
     <section class="assign">
-        <img src="images/my_storyboard.jpg" />
+        <a href="images/my_storyboard.jpg">
+            <img src="images/my_storyboard.jpg" />
+        </a>
         <section class="assign-det">
             <a href="files/all-storyboards.pdf">
                 <h2>Team Storyboards: John Doe</h2>
@@ -66,7 +74,9 @@
 
     <!-- Sketching Assignment -->
     <section class="assign">
-        <img src="images/my-sketch.jpg" />
+        <a href="files/sketches.pdf">
+            <img src="images/my-sketch.jpg" />
+        </a>
         <section class="assign-det">
             <a href="files/all-sketches.pdf">
                 <h2>Team Sketches: Accessing Textbooks</h2>
